// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`number() should return an error for non-number values 1`] = `
Object {
  "children": null,
  "message": "Value should be a number",
  "path": "",
}
`;

exports[`number() should return an error for non-number values 2`] = `
Object {
  "children": null,
  "message": "Value should be a number",
  "path": "",
}
`;

exports[`number() should return an error for non-number values 3`] = `
Object {
  "children": null,
  "message": "Value should be a number",
  "path": "",
}
`;

exports[`number() should return an error for non-number values 4`] = `
Object {
  "children": null,
  "message": "Value should be a number",
  "path": "",
}
`;

exports[`number() should return an error for non-number values 5`] = `
Object {
  "children": null,
  "message": "Value should be a number",
  "path": "",
}
`;

exports[`number() should return an error for non-number values 6`] = `
Object {
  "children": null,
  "message": "Value should be a number",
  "path": "",
}
`;

exports[`number() should support custom message 1`] = `
Object {
  "children": null,
  "message": "Custom message",
  "path": "",
}
`;
